@@ -1,3 +1,12 @@
+Next release
+============
+
+Bug Fixes
+---------
+
+- ``config.add_view(<aninstancemethod>)`` raised AttributeError involving
+  ``__text__``.  See https://github.com/Pylons/pyramid/issues/461
+
 1.3b2 (2012-03-02)
 ==================
 
